# sys_calculator

./: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile.in  README.md
deb-configs/: postinst  postinst.in  preinst  preinst.in  prerm  prerm.in
etc/dbus-1/system.d/: com.example.CalculatorService.conf
etc/systemd/system/: calculator.service
src/: app.cpp  app.h  args_parser.cpp  args_parser.h  calculator.cpp  calculator.hpp  dbus.cpp  dbus.hpp  main.cpp  task.cpp  task.hpp
